# QuantumScribe

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Iniciar.bat  LICENSE  PRIVACY.md  QuantumScribe-Linux.spec  QuantumScribe.spec  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.ps1  build_linux.sh  config.example.json  increment_version.py  install_linux.sh  install_linux_shortcut.sh  main.py  pyproject.toml  requirements-base.txt  requirements-build.txt  requirements-cuda-component.txt  requirements-cuda.txt  requirements-dev.txt  requirements-linux.txt  requirements-test.txt  requirements-vad-component.txt  requirements-windows.txt  requirements.txt  run.ps1  run_linux.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
docs/: PRD_CORE_LEVE_COMPONENTES_SOB_DEMANDA.md  PRD_FILA_TRANSCRICOES.md  PRD_IMPLEMENTACAO_PRODUCT_BACKLOG.md  PRD_PONTUACAO_LITERAL.md  PRD_PUBLICACAO_GITHUB.md  PRD_QS002_TRANSCRICAO_EXATA.md  PRD_QS003_CONFIGURACOES_CONTEXTUAIS.md  PRD_QS004_HUD_ICONE_TRANSICOES.md  PRD_QS006_DOWNLOAD_MODELO_RESILIENTE.md  PRD_QS007_ICONES_OFICIAIS.md  PRD_QS011_PESQUISA_TRANSCRICOES.md  PRD_QS017_ESTABILIDADE_HUD_INICIALIZACAO.md  PRD_QS018_ATUALIZACAO_APLICATIVO.md  PRD_RELEASE_PUBLICA_WINDOWS_V2.2.11.md  PRODUCT_BACKLOG.md
installer/: QuantumScribe.nsi
localwhisper/: __init__.py  app.py  audio.py  audio_enhancer.py  backup.py  cache.py  components.py  config.py  diary.py  download_progress.py  hardware.py  hotkey.py  memory.py  model_manager.py  post_processor.py  punctuation.py  (+13 more)
(+36 files in other folders)
